Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -57,7 +57,10 @@ Refer to this [separate document](Correspondence_National_International_Classifi
 
 ### Derived Variables
 
-In the public data from the NSO website, labour adn employment status information was already coded. One of the sub-data sets "LFS_ECSTAT.dta" which is the economic activity data set, have derived variables such as `Employed`, `Hired`, `Self_employed`, and `Unemployed`. [This](utilities/) is the complete variable list with labels and explanations from the NSO website.   
+In the public data from the NSO website, labour adn employment status information was already coded. One of the sub-data sets "LFS_ECSTAT.dta" which is the economic activity data set, have derived variables such as `Employed`, `Hired`, `Self_employed`, and `Unemployed`. Moreover, income variables of specific income questions covered in the questionnaire are missed. [This](utilities/report/GEO_LFS_Database_Variables.docx) is the complete variable list with labels and explanations from the NSO website in which the derived variables can be found. 
+
+However, without the un-coded original variables directly produced from the survey, GLD variables including `lstat`, `potential_lf` couldn't be created. As mentioned in the ["Where can the data be found?"](#where-can-the-data-be-found) part, we obtained the confidential original data sets from NSO which contains labour variables pulled out directly from the survey. We coded labour-related variables and income variables using the confidential data. The detailed explanations about merging extra data and coding labour variables are covered in [this separate document]().   
+
 
 
 ### Observation Exclusion
