--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -35,7 +35,7 @@ All the six years' official annual reports are provided in the table above throu
 
 Main data from 2017 to 2022 are publicly available on the [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). The downloadable datasets include sub-datasets that cover different sections in the questionnaire, namely demographics, economic activities, excluded populations, and personal weights.  
 
-However, employment-related variables have been already coded, which means that they are not the very original question-based variables. To validate the derived variables and code from the raw variables, we obtained raw data sets of the labour section and wage from the National Statistics Office (NSO) of Georgia. These data are not publicly available. Details about the derived variables are in the [other noteworthy aspects](#derived-variables). 
+However, employment-related variables have been already coded, which means that they are not the very original question-based variables. To validate the derived variables and code from the raw variables, we obtained raw data sets of the labour section and wage from the National Statistics Office (NSO) of Georgia. This data is not publicly available. Details about the derived variables are in the [other noteworthy aspects](#derived-variables). 
 
 ## What is the sampling procedure?
 
@@ -59,9 +59,7 @@ Refer to this [separate document](Correspondence_National_International_Classifi
 
 In the public data from the NSO website, labour adn employment status information was already coded. One of the sub-data sets "LFS_ECSTAT.dta" which is the economic activity data set, have derived variables such as `Employed`, `Hired`, `Self_employed`, and `Unemployed`. Moreover, income variables of specific income questions covered in the questionnaire are missed. [This](utilities/report/GEO_LFS_Database_Variables.docx) is the complete variable list with labels and explanations from the NSO website in which the derived variables can be found. 
 
-However, without the un-coded original variables directly produced from the survey, GLD variables including `lstat`, `potential_lf` couldn't be created. As mentioned in the ["Where can the data be found?"](#where-can-the-data-be-found) part, we obtained the confidential original data sets from NSO which contains labour variables pulled out directly from the survey. We coded labour-related variables and income variables using the confidential data. The detailed explanations about merging extra data and coding labour variables are covered in [this separate document](Merging_Original_Employment_Data_and Coding_Labour_Variables).   
-
-
+However, without the un-coded original variables directly produced from the survey, GLD variables including `lstat`, `potential_lf` couldn't be created. As mentioned in the ["Where can the data be found?"](#where-can-the-data-be-found) part, we obtained the confidential original data sets from NSO which contains labour variables pulled out directly from the survey. We coded labour-related variables and income variables using confidential data. The detailed explanations about merging extra data and coding labour variables are covered in [this separate document](Merging_Original_Employment_Data_and Coding_Labour_Variables.md).   
 
 ### Observation Exclusion
 
