Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -59,7 +59,7 @@ Refer to this [separate document](Correspondence_in_Industrial_Classification.md
 
 In the public data from the NSO website, labour adn employment status information was already coded. One of the sub-data sets "LFS_ECSTAT.dta" which is the economic activity data set, have derived variables such as `Employed`, `Hired`, `Self_employed`, and `Unemployed`. Moreover, income variables of specific income questions covered in the questionnaire are missed. [This](utilities/report/GEO_LFS_Database_Variables.docx) is the complete variable list with labels and explanations from the NSO website in which the derived variables can be found. 
 
-However, without the un-coded original variables directly produced from the survey, GLD variables including `lstat`, `potential_lf` couldn't be created. As mentioned in the ["Where can the data be found?"](#where-can-the-data-be-found) part, we obtained the confidential original data sets from NSO which contains labour variables pulled out directly from the survey. We coded labour-related variables and income variables using confidential data. The detailed explanations about merging extra data and coding labour variables are covered in [this separate document](Merging_Original_Employment_Data_and Coding_Labour_Variables.md).   
+However, without the un-coded original variables directly produced from the survey, GLD variables including `lstat`, `potential_lf` couldn't be created. As mentioned in the ["Where can the data be found?"](#where-can-the-data-be-found) part, we obtained the confidential original data sets from NSO which contains labour variables pulled out directly from the survey. We coded labour-related variables and income variables using confidential data. The detailed explanations about merging extra data and coding labour variables are covered in [this separate document](Merging_Original_Employment_Data_and_Coding_Labour_Variables.md).   
 
 ### Observation Exclusion
 
@@ -78,7 +78,7 @@ Below are the statistics of excluded observations in each year.
 | 2021 | 14,987         |  60,837     | 19.77  | 
 | 2022 | 15,264         |  60,262     | 20.21  |
 
-Below are the statistics of observations only in the demographic dataset. Since age is in the original demographic data set and is one of the inclusion conditions, it was used as an indicator to show the share of total sample size that was excluded because of age. Note that these observations excluded do not have any weights, hence we were not able to conduct any analysis using these data.
+There was no ID information to include the observations of respondents under 15 years of age to the households they are a part of. Below are the statistics of observations only in the demographic dataset. Since age is in the original demographic data set and is one of the inclusion conditions, it was used as an indicator to show the share of total sample size that was excluded because of age. Note that these observations excluded do not have any weights, hence we were not able to conduct any analysis using these data.
 
 | **Year**	| **# Age<15**	| **Percentage**	| **# Age>=15**	| **Percentage** |**Total** |
 | :------:	| :-------:		| :-------:	 	| :-------:	| :-------:	| :-------:	|
