--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -49,7 +49,7 @@ The GEO LFS is representative at the regional level with rural/urban division.
 
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, the first three years, 2017-2019, used the Statistical classification of Economic Activities in the European Community (NACE) rev.1 as the national classification, which corresponds to International Standard Industrial Classification (ISIC) rev.3. The last three years, 2020-2022, used more recent versions of national and international classifications, NACE rev.2 vs. ISIC rev.4. 
+Industrial classification is coded, in the first three years, 2017-2019, using the Statistical classification of Economic Activities in the European Community (NACE) rev.1 and rev.2, which correspond to International Standard Industrial Classification (ISIC) rev.3 and rev.4, respectively. The last three years, 2020-2022, uses only NACE rev.2. 
 
 For the classification of occupation, all six years followed the International Standard Classification of Occupation (ISCO) and did not have a separate national classification. 2017 to 2019 used ISCO 1998 whereas 2020 to 2022 used ISCO 2008.  
 
