--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -32,45 +32,47 @@ The NPL LFS data is not publicly available. All the data we used was downloaded 
 
 For 1998 and 2008, the total number of households is divided evenly between rural and urban areas. During the selection, a two-stage stratified sampling procedure based on probability proportional to size (PPS) was applied in both years. In the first stage, wards (PSUs) were selected with PPS, where the number of households in the ward at the time of the census provided the measure of size. In the second stage, from all the households listed in the selected PSUs, 20 households were selected from each on a systematic sampling basis. 
 
-The level of representativeness changed from four regions to seven provinces and hence the sample design in 2017 is different from the previous years in stratification and sample selection. During the sample selection, 2017 has the problem that too few PSUs with large number of households and most of the PSUs have small number of households. To address this issue, 2017 LFS used a stratification strategy which stratifies PSUs in each domain (province combined with rural/urban division) into three following the Lavallee-Hidiroglou (LH) algorithm. Details of this methodology are illustrated below and can be found on page 3 in the annual official LFS report linked above to 2017 in the table. 
+The level of representativeness changed from four regions to seven provinces and hence the sample design in 2017 is different from the previous years in stratification and sample selection. During the sample selection, 2017 has the problem that too few PSUs with large number of households and most of the PSUs have small number of households. To address this issue, 2017 LFS used a stratification strategy which stratifies PSUs in each domain (province combined with rural/urban division) into three following the Lavallee-Hidiroglou (LH) algorithm. Details of this methodology are illustrated below and can be found on page 3 in the [2017 annual report](utilities/NPL_LFS_2017_report.pdf). 
 
 ```
-This stratification method jointly minimizes the total coefficient of variation and the sample size in the choice of stratum boundaries and in the determination of sampling rate per stratum. Further accounting for the possible discrepancy between the stratification variables (number of households) and the target variable (e.g., number of employed individuals), modified LH Algorithm is used for a thorough review of methods of stratifying skewed populations. Modified LH Algorithm used to identify stratum boundaries of the three strata. Stratum 1 and Stratum 2 are smaller than Stratum 3, and are called the “take some” strata. Stratum 3, comprising of “bigger” PSUs where big is defined in terms of number of households, is also called “take all” stratum. From all the strata, samples were drawn from probability proportional to size (PPS) except in the areas where all the PSUs were taken in the sample. Regarding the sampling from stratum 3, the "take all" criterion was followed in all the rural areas and urban areas of province 3 only.
+This stratification method jointly minimizes the total coefficient of variation and the sample size in the choice of stratum
+boundaries and in the determination of sampling rate per stratum. Further accounting for the possible discrepancy between the
+stratification variables (number of households) and the target variable (e.g., number of employed individuals), modified LH
+Algorithm is used for a thorough review of methods of stratifying skewed populations. Modified LH Algorithm used to identify
+stratum boundaries of the three strata. Stratum 1 and Stratum 2 are smaller than Stratum 3, and are called the “take some”
+strata. Stratum 3, comprising of “bigger” PSUs where big is defined in terms of number of households, is also called “take all”
+stratum. From all the strata, samples were drawn from probability proportional to size (PPS) except in the areas where all the
+PSUs were taken in the sample. Regarding the sampling from stratum 3, the "take all" criterion was followed in all the rural
+areas and urban areas of province 3 only.
 ```
 
 ## What is the geographic significance level?
 
-In 1998 and 2008, the distribution of the total 75 districts is by five developing regions and three ecological belts. The five regions are: Eastern, Central, Western, Mid-western, and Far-western. And the three ecological belts are: mountain, hill, and terai. The distribution is shown in the table below. The geographic significance level of both years is region by rural and urban divisions. 
+In 1998 and 2008, the distribution of the total 75 districts is by five developing regions and three ecological belts. The five regions are: Eastern, Central, Western, Mid-western, and Far-western. And the three ecological belts are: mountain, hill, and terai. The distribution is shown in the table below. The **geographic significance level of 1998 and 2008 is region by rural and urban divisions**. 
 
 ![districts_1998_2008](utilities/districts_distribution.png)
 
-In 2017, the first level of administration changed to seven provinces and thus the geographic significance level of 2017 is the combination of province and rural/urban divisions, which generates fourteen domains.
+In 2017, the first level of administration changed to seven provinces and thus the geographic **significance level of 2017 is the combination of province and rural/urban divisions**, which generates fourteen statistically significant domains.
 
 ## Other noteworthy aspects  
 
 ### Names of the Provinces 
 
-In the official report of 2017, four out of seven provinces were named after numbers (i.e., Province 1, Province 2, Province 3 and Province 5) instead of their actual province names and so does the raw data set. By checking the populations and and districts they have, we confirmed their names as:
+The provinces of Nepal were created by the 2015 consitution of Nepal (and hence surveys are divided by regions). In the official report of 2017, four out of seven provinces were named after numbers (i.e., Province 1, Province 2, Province 3 and Province 5) instead of their actual province names and so does the raw data set. By checking the populations and and districts they have, we confirmed their names (and coded them in variable `subnatid1`) as:
 
-<br>
-<ins>1) Province 1: Koshi</ins>
-<br>
-<ins>2) Province 2: Madhesh</ins>
-<br>
-<ins>3) Province 3: Bagmati</ins>
-<br>
-<ins>4) Province 4: Gandaki</ins>
-<br>
-<ins>5) Province 5: Lumbini</ins>
-<br>
-<ins>6) Province 6: Karnali</ins> 
-<br>
-<ins>7) Province 7: Sudurpashchim</ins>
-<br>
+* Province 1: Koshi
+* Province 2: Madhesh
+* Province 3: Bagmati
+* Province 4: Gandaki
+* Province 5: Lumbini
+* Province 6: Karnali 
+* Province 7: Sudurpashchim
 
 ### The Splits of Nawalparasi and Rukum 
 
-Two districts in Nepal have experienced an administrative change during the harmonized years. Nawalparasi was divided into district Parasi and district Nawalpur in 2015. And now the district Parasi is in Gandaki province whereas district Nawalpur is in Lumbini province. Similarly, district Rukum was split into two districts in 2017. It was split into district Western Rukum located in Lumbini province and Eastern Rukum in Karnali province. Instead of using the new district names, the raw data of 2017 still uses the original district names Nawalparas and Rukum, which matches one district to two different provinces. To correct this mismatch, we re-coded these two districts by splitting the observations and assigning them to their new districts, based on their provinces. In this way we increased the total number of district from 75 to 77. 
+Two districts in Nepal have experienced an administrative change during the harmonized years. Nawalparasi was divided into district Parasi and district Nawalpur in 2015 (at the time of the creation of Nepal's provinces). The district Parasi was assigned to Gandaki province whereas district Nawalpur is located in Lumbini province. 
+
+Similarly, Rukum district was split into two districts in 2017. It was split into district Western Rukum located in Lumbini province and Eastern Rukum in Karnali province. Instead of using the new district names, the raw data of 2017 still uses the original district names Nawalparasi and Rukum, which matches one district to two different provinces. To correct this mismatch, we re-coded these two districts by splitting the observations and assigning them to their new districts, based on their provinces. In this way we increased the total number of district from 75 to 77. 
  
 Because these changes happened after 2008 and 2008 did not use province as its administrative level in the survey, we only recoded the two districts to match observations to their current province in 2017.      
 
