--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -1,9 +1,65 @@
 
-# Evolution of the Morocco Labor Force Survey
+-   [Introduction to the Morocco Enquête Nationale sur l’Emploi (ENE)](#introduction-to-morocco-ene)
+    -   [What is the MAR ENE?](#what-is-the-mar-ene)
+    -   [What does the MAR ENE cover?](#what-does-the-mar-ene-cover)
+    -   [Where can the data be found?](#where-can-the-data-be-found)
+    -   [What is the sampling
+        procedure?](#what-is-the-sampling-procedure)
+    -   [What is the significance
+        level?](#what-is-the-significance-level)
+    -   [Other noteworthy aspects](#other-noteworthy-aspects)
 
+
+# Introduction to the Morocco Enquête Nationale sur l’Emploi (ENE)
+
+## What is the MAR ENE?
+
+The Morocco Enquête Nationale sur l’Emploi (ENE) is an labor force survey conducted by the La Direction de la Statistique relevant du Haut Commissariat au plan (The Statistics Directorate of the High Commission for Planning of Morocco). The survey began in 1976 as an annual survey with an exclusively urban sample. It evolved to become a nationally representative survey in 1999, and began collecting quarterly information in 1996. While the survey goes a long way, the GLD only has data for each year between 2000 and 2018.  
+
+The table below summarizes the evolution of the survey design over time: 
 |                         | 1976-1982                       | 1984-1993                                | 1995-2005                                                                                           | 2006-2016                                                                                     | 2017-present                                                                            |
 |-------------------------|--------------------------------|------------------------------------------|------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------|
 | **Survey Field**        | Exclusively urban environment  | Urban + an additional rural survey       | In 1999, the survey scope was extended to rural areas                                               | Urban + Rural                                                                                     | Urban + Rural                                                                                |
 | **Sample Size (per year)** | Approximately 16,000 households | Approximately 32,000 households, of which about 16,000 households are for the rural survey. | Approximately 48,000 households (of which 16,000 are rural households). Half of the sample is renewed each year. | Expansion of the sample to 60,000 households (of which 20,000 are rural households).      | Expansion of the sample to 90,000 households (of which 30,000 are rural households).         |
 | **Questionnaire Format**   | Paper                           | Paper                                    | Paper                                                                                                 | Use of the CAPI method in data collection (2007)                                               | Update of the CAPI system                                                                      |
 | **Publications**        | Annual                          | Annual                                   | Annual for basic indicators: activity, employment, and unemployment: Quarterly                       | Quarterly                                                                                       | Quarterly                                                                                      |
+
+
+## What does the the MAR ENE cover?
+
+The Morocco ENE mainly covers information on the socioeconomic and demographic characteristics, education and labor market activites over the past 7 days. 
+
+While the survey started in 1976, the GLD only has data for each year between 2000 and 2018.  Sample size for each survey round are as follows:
+
+| Year | Persons  | Households |
+|------|----------|------------|
+| 2000 | 225,644  | 40,980     |
+| 2001 | 216,672  | 40,279     |
+| 2002 | 206,755  | 39,368     |
+| 2003 | 234,100  | 45,116     |
+| 2004 | 226,433  | 44,288     |
+| 2005 | 230,832  | 45,673     |
+| 2006 | 284,733  | 60,111     |
+| 2007 | 277,193  | 59,431     |
+| 2008 | 266,789  | 58,114     |
+| 2009 | 263,068  | 58,601     |
+| 2010 | 258,427  | 58,217     |
+| 2011 | 251,955  | 58,023     |
+| 2012 | 245,805  | 57,636     |
+| 2013 | 244,759  | 57,806     |
+| 2014 | 240,024  | 57,325     |
+| 2015 | 235,948  | 57,209     |
+| 2016 | 230,667  | 57,284     |
+| 2017 | 359,971  | 88,562     |
+| 2018 | 345,647  | 86,380     |
+
+## Where can the data be found?
+
+The datasets are not accessible to the public and researchers have to request the data from the Haut Commissariat au plan. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
+
+## What is the sampling procedure?
+
+The survey adopts a two stage stratified sampling design. The national territory is initially segmented into drawing zones based on homogeneity. Within these zones, Primary Sampling Units (PSUs), each comprising several adjacent census districts, are defined. The master sample is formed by selecting a certain percentage of these PSUs, ensuring balanced representation across different areas. PUs are chosen within each zone by probability proportional to size.
+
+## What is the geographic significance level?
+
