--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -14,7 +14,7 @@
 
 ## What is the MAR ENE?
 
-The Morocco Enquête Nationale sur l’Emploi (ENE) is an labor force survey conducted by the La Direction de la Statistique relevant du Haut Commissariat au plan (The Statistics Directorate of the High Commission for Planning of Morocco). The survey began in 1976 as an annual survey with an exclusively urban sample. It evolved to become a nationally representative survey in 1999, and began collecting quarterly information in 1996. While the survey goes a long way, the GLD only has data for each year between 2000 and 2018.  
+The Morocco Enquête Nationale sur l’Emploi (ENE) is an labor force survey conducted by the La Direction de la Statistique relevant du Haut Commissariat au Plan (The Statistics Unit of the High Commission for Planning of Morocco). The survey began in 1976 as an annual survey with an exclusively urban sample. It evolved to become a nationally representative survey in 1999, and began collecting quarterly information in 1996. While the survey goes a long way, the GLD only has data for each year between 2000 and 2018.  
 
 The table below summarizes the evolution of the survey design over time: 
 |                         | 1976-1982                       | 1984-1993                                | 1995-2005                                                                                           | 2006-2016                                                                                     | 2017-present                                                                            |
@@ -55,11 +55,15 @@ While the survey started in 1976, the GLD only has data for each year between 20
 
 ## Where can the data be found?
 
-The datasets are not accessible to the public and researchers have to request the data from the Haut Commissariat au plan. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
+The datasets are not accessible to the public and researchers have to request the data from the Haut Commissariat au Plan. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
 
 ## What is the sampling procedure?
 
 The survey adopts a two stage stratified sampling design. The national territory is initially segmented into drawing zones based on homogeneity. Within these zones, Primary Sampling Units (PSUs), each comprising several adjacent census districts, are defined. The master sample is formed by selecting a certain percentage of these PSUs, ensuring balanced representation across different areas. PUs are chosen within each zone by probability proportional to size.
 
 ## What is the geographic significance level?
+
+The official reports detail results by area of residence (urban/rural) and regions. 
+
+
 
