Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -65,5 +65,11 @@ The survey adopts a two stage stratified sampling design. The national territory
 
 The official reports detail results by area of residence (urban/rural) and regions. 
 
+## Other Noteworthy Aspects
+
+### Geographic information
+
+In 2015, Morocco's administrative landscape underwent a pivotal transformation with the consolidation of its regions, reducing the total from 16 to 12. This reorganization, rooted in the 2011 constitutional reforms and implemented under Law 59-11, was focused on realigning regional boundaries to better reflect economic and geographic conditions, enhancing local governance. The move marked a significant step towards decentralization, boosting regional autonomy to enable more tailored development strategies. In the Morocco ENE, this regional reorganization was reflected as soon as the 2015 survey was released. 
+
 
 
