Add intro paragraph on MAR education system

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -71,5 +71,11 @@ The official reports detail results by area of residence (urban/rural) and regio
 
 In 2015, Morocco's administrative landscape underwent a pivotal transformation with the consolidation of its regions, reducing the total from 16 to 12. This reorganization, rooted in the 2011 constitutional reforms and implemented under Law 59-11, was focused on realigning regional boundaries to better reflect economic and geographic conditions, enhancing local governance. The move marked a significant step towards decentralization, boosting regional autonomy to enable more tailored development strategies. In the Morocco ENE, this regional reorganization was reflected as soon as the 2015 survey was released. 
 
+### Education
+
+Morocco's education system is structured into several distinct levels, each with its own set of requirements and duration. The system begins with the optional pre-primary education followed by nine years of compulsory basic education, starting from age 6. This basic education is divided into two cycles: six years of primary education and three years of lower secondary education. Arabic is the primary language of instruction, with French introduced in the third grade. After completing lower secondary education, students have the option to pursue either general/technical secondary education or vocational training. The general/technical secondary education lasts for three years and culminates in the baccalauréat exam, which is crucial for entry into higher education. For vocational training, students can enter a variety of programs post-lower secondary education, depending on their qualifications and the entrance examinations they pass.
+
+
+
 
 
