Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -73,7 +73,5 @@ In 2015, Morocco's administrative landscape underwent a pivotal transformation w
 
 ### Education
 
-Morocco's education system is structured into several distinct levels, each with its own set of requirements and duration. The system begins with the optional pre-primary education followed by nine years of compulsory basic education, starting from age 6. This basic education is divided into two cycles: six years of primary education and three years of lower secondary education. After completing lower secondary education, students have the option to pursue either general/technical secondary education or vocational training. The general/technical secondary education lasts for three years and culminates in the baccalauréat exam, which is crucial for entry into higher education. For vocational training, students can enter a variety of programs post-lower secondary education, depending on their qualifications and the entrance examinations they pass.
-
-The Morocco ENE uses a 4-digit classification system to identify respondents' educational attainment called the *Nomenclature nationale des diplômes*. In the raw datasets, the variable for this detailed education codes was available between the 2000 and 2013 rounds, which used the June 2000 version. In the succeeding years, the datasets we received did not include the 4-digit education codes, but instead have broad education categories. For more information on the mapping between the education codes or the broad categories with the GLD education variable, refer to this document.
+The Morocco ENE uses a 4-digit classification system to identify respondents' educational attainment called the *Nomenclature nationale des diplômes*. In the raw datasets, the variable for this detailed education codes was available between the 2000 and 2013 rounds, but switched to broad categories in succeeding rounds. For more information on the mapping between the education codes or the broad categories with the GLD education variable, refer to this document.
 
