Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -73,5 +73,5 @@ In 2015, Morocco's administrative landscape underwent a pivotal transformation w
 
 ### Education
 
-The Morocco ENE uses a 4-digit classification system to identify respondents' educational attainment called the *Nomenclature nationale des diplômes*. In the raw datasets, the variable for this detailed education codes was available between the 2000 and 2013 rounds, but switched to broad categories in succeeding rounds. For more information on the mapping between the education codes or the broad categories with the GLD education variable, refer to this document.
+The Morocco ENE uses a 4-digit classification system to identify respondents' educational attainment called the *Nomenclature nationale des diplômes*. In the raw datasets, the variable for this detailed education codes was available between the 2000 and 2013 rounds, but switched to broad categories in succeeding rounds. For more information on the mapping between the education codes or the broad categories with the GLD education variable, refer to this [separate document](Education%system.md).
 
