Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -75,3 +75,9 @@ In 2015, Morocco's administrative landscape underwent a pivotal transformation w
 
 The Morocco ENE uses a 4-digit classification system to identify respondents' educational attainment called the *Nomenclature nationale des diplômes*. In the raw datasets, the variable for this detailed education codes was available between the 2000 and 2013 rounds, but switched to broad categories in succeeding rounds. For more information on the mapping between the education codes or the broad categories with the GLD education variable, refer to this [separate document](Education%20system.md).
 
+### Occupation codes
+
+The Morocco ENE uses the *Nomenclature analytique des professions* to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). For this reason, we assigned the `occup_isco` codes only at the first digit, similar to our approach with the `occup` variable. For users who are interested with a more detailed mapping with ISCO, we have prepared a recommended mapping at the 2-digit level shown in this separate document. 
+
+
+
