Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -77,7 +77,5 @@ The Morocco ENE uses a 4-digit classification system to identify respondents' ed
 
 ### Occupation codes
 
-The Morocco ENE uses the *Nomenclature analytique des professions* to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). For this reason, we assigned the `occup_isco` codes only at the first digit, similar to our approach with the `occup` variable. For users who are interested with a more detailed mapping with ISCO, we have prepared a recommended mapping at the 2-digit level shown in this separate document. 
-
-
+The Morocco ENE uses the *Nomenclature analytique des professions* to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). For this reason, we assigned the `occup_isco` codes only at the first digit, similar to our approach with the `occup` variable. For users who are interested with a more detailed mapping with ISCO, we have prepared a recommended mapping at the 2-digit level shown in this [separate document](Mapping%20to%20ISCO.md)
 
