--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -1,15 +1,15 @@
-# Introduction to Sri Lanka (LKA) national Labour Force Survey (LFS)
+# Introduction to Armenia (ARM) national Labour Force Survey (LFS)
 
-- [What is the LKA LFS](#what-is-the-lka-lfs)
-- [What does the LKA LFS cover?](#what-does-the-lka-lfs-cover)
+- [What is the ARM LFS](#what-is-the-arm-lfs)
+- [What does the ARM LFS cover?](#what-does-the-arm-lfs-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the geographic significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the LKA LFS?
+## What is the ARM LFS?
 
-The Sri Lankan Labour Force Survey (LFS) is a household-based sample survey conducted by the Department of Census & Statistics under the National Household Survey Program. Starting in 1990, the LKA LFS has been conducted quarterly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Sri Lanka. 
+The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the Department of Census & Statistics under the National Household Survey Program. Starting in 1990, the ARM LFS has been conducted quarterly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Sri Lanka. 
 
 
 ## What does the LKA LFS cover?
@@ -20,29 +20,15 @@ GLD harmonization of LKA LFS covers 1992 to 2021, 23 years in total. Note that w
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
-| 1992 | 18,828        | 91,624      |  12,067,012  |   10,080   | 12,058,463|
-| 1993 | 6,763         | 36,693      |  12,278,057  |   8,000   | 12,278,055|
-| 1994 | 6,548         | 34,997      |  12,493,005  |   10,000   | 12,492,850|
-| 1995 | 6,511         | 34,148      |  12,736,185  |   N/A      | 12,736,185|
-| 1996 | 15,116        | 68,489      |  12,834,145  |   16,000   | 12,831,240|
-| 1998 | 13,431        | 60,263      |  12,891,187  |   16,000   | 12,881,790|
-| 1999 | 13,402        | 59,480      |  13,171,551  |   16,000   | 13,169,250|
-| 2000 | 13,319        | 58,604      |  13,566,897  |   16,000   | 13,564,660|
-| 2001 | 10,205        | 44,610      |  13,873,418  |   15,915   | 13,870,479|
-| 2002 | 14,161        | 58,679      |  14,201,428  |   16,000   | 14,201,396|
-| 2003 | 16,235        | 67,060      |  15,568,945  |   16,000   | 15,651,479   |
-| 2004 | 22,579        | 93,252      |  16,727,635  |   20,000   | 16,593,431   |
-| 2006 | 17,208        | 68,931      |  14,838,834  |   18,200   | 14,833,802   |
-| 2007 | 17,055        | 68,186      |  15,045,605  |   18,390   | 15,047,882   |
-| 2008 | 18,596        | 73,463      |  16,320,108  |   20,260   | 16,319,065   |
-| 2011 | 14,408        | 56,172      |  17,909,455  |   17,620   | 17,909,743   |
-| 2012 | 16,336        | 62,298      |  17,915,383  |   19,420   | 17,915,383   |
-| 2013<sup>*</sup> | 20,785        | 79,347      |  16,527,722  |   25,000   | 16,359,761   |
-| 2014<sup>*</sup> | 21,446        | 81,385      |  15,284,022  |   25,000   | 16,531,768   |
-| 2015<sup>*</sup> | 21,895        | 82,800      |  15,438,706  |   25,000   | 15,281,945   |
-| 2019<sup>*</sup> | 21,696        | 82,800      |  16,424,016  |   25,750   | 16,424,016   |
-| 2020<sup>*</sup> | 21,149        | 77,251      |  16,424,016  |   25,750   | 16,739,396   |
-| 2021<sup>*</sup> | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659   |
+| 2014 | 21,446        | 81,385      |  15,284,022  |   25,000   | 16,531,768   |
+| 2015 | 21,895        | 82,800      |  15,438,706  |   25,000   | 15,281,945   |
+| 2016 | 21,696        | 82,800      |  16,424,016  |   25,750   | 16,424,016   |
+| 2017 | 21,149        | 77,251      |  16,424,016  |   25,750   | 16,739,396   |
+| 2018 | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659   |
+| 2019 | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659   |
+| 2020 | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659   |
+| 2021 | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659   |
+| 2022 | 7,760       | 27,218      |  2,969,037  |   25,750   | 17,133,659   |
 
 Note: 
 1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and above (years marked with <sup>*</sup> ). 
