--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -77,5 +77,12 @@ The Morocco ENE uses a 4-digit classification system to identify respondents' ed
 
 ### Occupation codes
 
-The Morocco ENE uses the *Nomenclature analytique des professions* to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). For this reason, we assigned the `occup_isco` codes only at the first digit, similar to our approach with the `occup` variable. For users who are interested with a more detailed mapping with ISCO, we have prepared a recommended mapping at the 2-digit level shown in this [separate document](Mapping%20to%20ISCO.md)
+The Morocco ENE uses the *Nomenclature Analytique des Professions* to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). For this reason, we assigned the `occup_isco` codes only at the first digit, similar to our approach with the `occup` variable. For users who are interested with a more detailed mapping with ISCO, we have prepared a recommended mapping at the 2-digit level shown in this [separate document](Mapping%20to%20ISCO.md)
 
+### Industry codes
+The Morocco ENE uses the *Nomenclature Morocaine des Activités* (NMA) to classify industries. In the 2000 - 2009 rounds, the industry information were detailed at the 4-digt level following the NMA 1999, which is compatible with ISIC rev 3. In the 2010 - 2018 rounds, the ENE industry classification switched to the updated NMA 2010, which is compatible with ISIC rev 4, but industry infomation is only available at broad categories and only allowed us to map to the ISIC rev 4 letters.
+
+| ENE rounds   | Raw variable     | NMA version | ISIC digits      | ISIC version |
+|--------------|------------------|-------------|------------------|--------------|
+| 2000 - 2009  | 4 digit codes    | NMA 1999    | First two digits | ISIC 3       |
+| 2010 - 2018  | Broad categories | NMA 2010    | Letter           | ISIC 4       |
