--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -59,7 +59,7 @@ The datasets are not accessible to the public and researchers have to request th
 
 ## What is the sampling procedure?
 
-The survey adopts a two stage stratified sampling design. The national territory is initially segmented into drawing zones based on homogeneity. Within these zones, Primary Sampling Units (PSUs), each comprising several adjacent census districts, are defined. The master sample is formed by selecting a certain percentage of these PSUs, ensuring balanced representation across different areas. PUs are chosen within each zone by probability proportional to size.
+The survey adopts a two stage stratified sampling design. The national territory is initially segmented into drawing zones based on homogeneity. Within these zones, Primary Sampling Units (PSUs), each comprising several adjacent census districts, are defined. The master sample is formed by selecting a certain percentage of these PSUs, ensuring balanced representation across different areas. PSUs are chosen within each zone by probability proportional to size.
 
 ## What is the geographic significance level?
 
