--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -14,7 +14,7 @@ The Armenian Labour Force Survey (LFS) is a household-based sample survey conduc
 
 ## What does the LKA LFS cover?
 
-The LKA LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. Economic activities such as employment status, work hours and payment were collected in two reference periods for years between 1992 and 2004: 1) "current" or "last-7-day" activities and 2) "usual" status or the "past 12-month" reference period. The LKA LFS does not have a specific migration section, though it has a question about birth place. Yet it cannot be sufficiently deemed as an indication of migration.   
+The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. The LFS covers indicators such as the country labour resources, or working age population, by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and income etc. 
 
 GLD harmonization of LKA LFS covers 1992 to 2021, 23 years in total. Note that we did not harmonize all years in sequence, but the years we have complete data of good quality. Years and sample size of LFS harmonized for GLD are:
 
