Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -12,7 +12,7 @@
 The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the Department of Census & Statistics under the National Household Survey Program. Starting in 1990, the ARM LFS has been conducted quarterly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Sri Lanka. 
 
 
-## What does the LKA LFS cover?
+## What does the ARM LFS cover?
 
 The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. The LFS covers indicators such as the country labour resources, or working age population, by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and income etc. 
 
