Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -14,9 +14,9 @@ The Armenian Labour Force Survey (LFS) is a household-based sample survey conduc
 
 ## What does the ARM LFS cover?
 
-The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. The LFS covers indicators such as the country labour resources, or working age population, by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and income etc. 
+The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. The LFS covers indicators such as the country labour resources, or working age population, by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and income etc. The ARM LFS started to include migration information since 2018.  
 
-GLD harmonization of LKA LFS covers 1992 to 2021, 23 years in total. Note that we did not harmonize all years in sequence, but the years we have complete data of good quality. Years and sample size of LFS harmonized for GLD are:
+GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 years in total. Years and their according sample size of LFS harmonized are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
