--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -14,7 +14,7 @@ The Armenian Labour Force Survey (LFS) is a household-based sample survey conduc
 
 ## What does the ARM LFS cover?
 
-The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. The LFS covers indicators such as the country labour resources, or working age population, by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and income etc. The ARM LFS started to include migration information since 2018.  
+The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. In addition to general household characteristics, the LFS covers indicators such as the country labour resources, or working age population (aged 15 to 75), by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and income etc. The ARM LFS started to include migration information since 2018.  
 
 GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 years in total. Years and their according sample size of LFS harmonized are:
 
@@ -30,10 +30,6 @@ GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 year
 | 2021 | 7,776         | 26,923      |  2,962,306  |   25,750   | 17,133,659   |
 | 2022 | 7,760         | 27,218      |  2,969,037  |   25,750   | 17,133,659   |
 
-Note: 
-1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and above (years marked with <sup>*</sup> ). 
-2) The annual report of 1995 could not be found so the number of household reported officially for this year is unknown.
-3) Data of 2005 is actually availabel but we did not harmonize this year considering its poor quality. The dataset has large amount of duplications and it only has observations in the third quarter, meaning a small sample size about one fourth of other years. Furthermore, the coding of district is not consistent with other years and the categories are different from the code list stated in the questionnaire.  
 
 ## Where can the data be found?
 
