--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -9,26 +9,26 @@
 
 ## What is the ARM LFS?
 
-The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the Department of Census & Statistics under the National Household Survey Program. Starting in 1990, the ARM LFS has been conducted quarterly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Sri Lanka. 
+The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the National Statistical Service of the Republic of Armenia. Before 2014, the Households Integrated Living Condition Survey played the central role of providing labour market statistics. Since 2014, the ARM LFS was conducted monthly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Armenia. 
 
 
 ## What does the ARM LFS cover?
 
-The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. In addition to general household characteristics, the LFS covers indicators such as the country labour resources, or working age population (aged 15 to 75), by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and income etc. The ARM LFS started to include migration information since 2018.  
+The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. In addition to general household characteristics, the LFS covers indicators such as the country labour resources, or working age population (aged 15 to 75), by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and incomes etc. The ARM LFS started to include migration information since 2018.  
 
-GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 years in total. Years and their according sample size of LFS harmonized are:
+GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 years in total. Years and their corresponding sample sizes of LFS harmonized are:
 
-| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
-| :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
-| 2014 | 7,679         | 29,453      |  3,087,669  |   7,680   | 16,531,768   |
-| 2015 | 7,788         | 29,662      |  3,023,842  |   7,788   | 15,281,945   |
-| 2016 | 7,788         | 28,516      |  2,895,298  |   25,750   | 16,424,016   |
-| 2017 | 7,783         | 28,463      |  2,927,886  |   25,750   | 16,739,396   |
-| 2018 | 7,788         | 28,296      |  2,908,921  |   25,750   | 17,133,659   |
-| 2019 | 7,768         | 27,854      |  2,839,777  |   25,750   | 17,133,659   |
-| 2020 | 7,781         | 27,986      |  2,961,467  |   25,750   | 17,133,659   |
-| 2021 | 7,776         | 26,923      |  2,962,306  |   25,750   | 17,133,659   |
-| 2022 | 7,760         | 27,218      |  2,969,037  |   25,750   | 17,133,659   |
+| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| 
+| :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| 
+| 2014 | 7,679         | 29,453      |  3,087,669  |   7,680   |
+| 2015 | 7,788         | 29,662      |  3,023,842  |   7,788   | 
+| 2016 | 7,788         | 28,516      |  2,895,298  |   25,750   | 
+| 2017 | 7,783         | 28,463      |  2,927,886  |   25,750   | 
+| 2018 | 7,788         | 28,296      |  2,908,921  |   25,750   |
+| 2019 | 7,768         | 27,854      |  2,839,777  |   25,750   | 
+| 2020 | 7,781         | 27,986      |  2,961,467  |   25,750   |
+| 2021 | 7,776         | 26,923      |  2,962,306  |   25,750   | 
+| 2022 | 7,760         | 27,218      |  2,969,037  |   25,750   | 
 
 
 ## Where can the data be found?
