Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -9,12 +9,23 @@
 
 ## What is the ARM LFS?
 
-The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the National Statistical Service of the Republic of Armenia. Before 2014, the Households Integrated Living Condition Survey played the central role of providing labour market statistics. Since 2014, the ARM LFS was conducted monthly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Armenia. 
+The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the National Statistical Service (NSS) of the Republic of Armenia. Before 2014, the Households Integrated Living Condition Survey played the central role of providing labour market statistics. Since 2014, the ARM LFS was conducted monthly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Armenia. 
 
 
 ## What does the ARM LFS cover?
 
-The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. In addition to general household characteristics, the LFS covers indicators such as the country labour resources, or working age population (aged 15 to 75), by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and incomes etc. The ARM LFS started to include migration information since 2018.  
+The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. In addition to general household characteristics, the LFS covers indicators such as the country labour resources, or working age population (aged 15 to 75), by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and incomes etc. The ARM LFS started to include migration information since 2018. 
+
+**Scope of Survey**:
+<br>
+1) Primary Sampling Unit (PSU): PSU is a private household. The residents of the retirement homes, prisons
+and other institutional households are not surveyed.
+2) Survey Units: People aged from 15 to 75 who a) usually live in a given household; b) were absent from the household up to 12 months (in country or abroad); c) were in compulsory military service.
+3) Observation Period: All 12 months of the surveyed year.
+4) Reference Period: The last one calendar week preceding the survey, from Monday to Sunday.
+5) Geographical Coverage: Survey conducted in all 11 marzes (provinces), covering both rural and urban settlements.
+
+
 
 GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 years in total. Years and their corresponding sample sizes of LFS harmonized are:
 
@@ -30,6 +41,7 @@ GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 year
 | 2021 | 7,776         | 26,923      |  2,962,306  |   25,750   | 
 | 2022 | 7,760         | 27,218      |  2,969,037  |   25,750   | 
 
+(<sup>*</sup>Note: The officially reported sample sizes are from methodology documentation of each year, which can be found from the [online publication library of NSS](https://armstat.am/en/?nid=82&year=2013).)  
 
 ## Where can the data be found?
 
