--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -69,7 +69,7 @@ The official reports detail results by area of residence (urban/rural) and regio
 
 ### Geographic information
 
-In 2015, Morocco's administrative landscape underwent a pivotal transformation with the consolidation of its regions, reducing the total from 16 to 12. This reorganization amarked a significant step towards decentralization and boosting regional autonomy. In the Morocco ENE, this regional reorganization was reflected as soon as the 2015 survey was released. The 
+In 2015, Morocco's administrative landscape underwent a pivotal transformation with the consolidation of its regions, reducing the total from 16 to 12. This reorganization amarked a significant step towards decentralization and regional autonomy. In the Morocco ENE, this regional reorganization was reflected as soon as the 2015 survey was released. 
 
 ### Education
 
