Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -60,8 +60,8 @@ The ARM LFS went through a change between 2017 and 2018 in its questionnaire str
 
 |  **2014-2017**	|  **2018-2022**	| 
 | :-------------:	| :------------:	|
-|![report](utilities/2017_ICLS_evidence.png) | ![report18](utilities/2018_ICLS_evidence.png) | 
-|![questionnaire](utilities/ICLS13_questions.png) | ![questionnaire18](utilities/ICLS19_questions.png) |
+|![report](utilities/2017_evidence.png) | ![report18](utilities/2018_evidence.png) | 
+|![questionnaire](utilities/2017_question.png) | ![questionnaire18](utilities/2018_question.png) |
 
 ### Coding of industry and occupation codes
 
