Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -50,13 +50,14 @@ A two stage stratified sample by regions (marzes) has been designed to conduct t
 
 ## What is the geographic significance level?
 
-The ARM LFS is representative at the urban/rural division of each marze level. 
+According to the [methodology section](utilities/ARM_2018_methodologies.pdf) in ARM LFS annual reports, the annual size of the sample in terms of aggregated indicators (e.g. unemployment, employment, etc.) provides high representativeness on country level, and provides minimum representativeness on marz
+(province) level.
 
 ## Other noteworthy aspects  
 
 ### Changes in International Conference of Labour Statisticians (ICLS) version and its impact on results  
 
-The ARM LFS went through a change between 2017 and 2018 in its questionnaire structure and the ICLS version applied which accordingly changed some of the questions surveyed. From 2014 to 2017, the ARM LFS used ICLS-13, meaning that working for own consumption is defined as employed. The change in the definition is rdocumented in the methodology section of [2017](utilities/ARM_2014-2017_employment_definition.pdf) and [2018](utilities/ARM_2018_employment_definition.pdf)'s annual reports. The table below shows the difference in the official explanations and employment block in 2017 and 2018's questionnaires.  
+The ARM LFS went through a change between 2017 and 2018 in its questionnaire structure and the ICLS version applied which accordingly changed some of the questions surveyed. From 2014 to 2017, the ARM LFS used ICLS-13, meaning that working for own consumption is defined as employed. The change in the definition is documented in the employment section of [2017](utilities/ARM_2014-2017_employment_definition.pdf) and [2018](utilities/ARM_2018_employment_definition.pdf)'s annual reports. The table below shows the difference in the official explanations and employment block in 2017 and 2018's questionnaires.  
 
 |  **2014-2017**	|  **2018-2022**	| 
 | :-------------:	| :------------:	|
