Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -66,10 +66,7 @@ The ARM LFS went through a change between 2017 and 2018 in its questionnaire str
 
 ### Coding of industry and occupation codes
 
-In terms of classifications of industry and occupation, we only have definite information on the national and international versions used for years from 2013 to 2021. As mentioned in the previous section, these years use national classifications SLSCO-08 and SLSIC 4 which are based on ISCO-08 and ISIC rev.4 respectively. For years before 2013, 2002 and 2012 annual reports both claim to use ISCO-88 and ISIC rev.4. However, we were unable to validate this claim and even if we had confirmed it we would not have the corresponding table to map. The original industrial and occupation variables in the raw data sets not only have categories beyond ISIC and ISCO, but also miss a whole industrial group such as "Manufacture of wearing apparel". 
-
-For 2013-2021, we harmonized both industry and occupation at 4-digit level. Detailed corresponding tables and mapping process are in this [separate document](Correspondence_National_International_Classifications.md) . 
-
+In terms of classifications of industry and occupation, ARM LFS used ISIC-4 and ISCO-08 respectively for all years. No national classifications applied. However, regarding the level of classification, both industry and occupation only used letters. The full lists of industry and occupation labels are covered in this [separate document](Classifications_of_Industry_and_Occupation.md) . 
 
 ### Migrated from other countries
 
