Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -70,6 +70,11 @@ In terms of classifications of industry and occupation, ARM LFS used ISIC-4 and 
 
 ### Migrated from other countries
 
+Since 2018, ARM LFS started to have the migration section. From 2019 to 2022, one of the "last settlement" options is Artsakh, an enclave within Azerbaijan from the 2020 Nagorno-Karabakh war until the 2023 Azerbaijani offensive, when the Azerbaijani military took control over the remaining territory controlled by Artsakh. Although Artsakh declared itself an independent state, as the Republic of Artsakh, no United Nations member state or observer recognised Artsakh's independence and consider it as part of Azerbaijiani. Consequently, there is no ISO three-letter country code for Artsakh. In this case, we coded Artsakh "AZE", using the ISO code of Azerbaijiani for Artsakh. 
+
+![migration_country](utilities/migration.png)
+
+
 
 
 ### Age variables in 2021 and 2022
