Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -74,12 +74,13 @@ Since 2018, ARM LFS started to have the migration section. From 2019 to 2022, on
 
 ![migration_country](utilities/migration.png)
 
-
-
-
 ### Age variables in 2021 and 2022
 
+Different from previous years, the last two years, 2021 and 2022 do not have the actual age of each observation in the raw dataset. Instead, they coded the age variable as in 16 age groups (refer to the screenshot from 2022 below).
 
+![2022_age_group](utilities/age_groups.png)
+
+In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks. Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represnt the actual age of a given observation, yet instead, it indicates the age group a given observation belongs to. 
 
 ### Educational categories
 
