Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -64,6 +64,10 @@ The ARM LFS went through a change between 2017 and 2018 in its questionnaire str
 |![report](utilities/2017_evidence.png) | ![report18](utilities/2018_evidence.png) | 
 |![questionnaire](utilities/2017_question.png) | ![questionnaire18](utilities/2018_question.png) |
 
+This change leads to an apparent decrease in non-paid employees.
+
+![empstat decrease](utilities/empstat.png)
+
 ### Coding of industry and occupation codes
 
 In terms of classifications of industry and occupation, ARM LFS used ISIC-4 and ISCO-08 respectively for all years. No national classifications applied. However, regarding the level of classification, both industry and occupation only used letters. The full lists of industry and occupation labels are covered in this [separate document](Classifications_of_Industry_and_Occupation.md) . 
@@ -80,7 +84,7 @@ Different from previous years, the last two years, 2021 and 2022 do not have the
 
 ![2022_age_group](utilities/age_groups.png)
 
-In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks. Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represnt the actual age of a given observation, yet instead, it indicates the age group a given observation belongs to. 
+In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks. Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represnt the actual age of a given observation. Yet instead, it indicates the age group a given observation belongs to. 
 
 ### Educational categories
 
