Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -50,8 +50,7 @@ A two stage stratified sample by regions (marzes) has been designed to conduct t
 
 ## What is the geographic significance level?
 
-According to the [methodology section](utilities/ARM_2018_methodologies.pdf) in ARM LFS annual reports, the annual size of the sample in terms of aggregated indicators (e.g. unemployment, employment, etc.) provides high representativeness on country level, and provides minimum representativeness on marz
-(province) level.
+According to the [methodology section](utilities/ARM_2018_methodologies.pdf) in ARM LFS annual reports, the annual size of the sample in terms of aggregated indicators (e.g. unemployment, employment, etc.) provides high representativeness on country level, and provides minimum representativeness on marz (province) level.
 
 ## Other noteworthy aspects  
 
@@ -66,7 +65,7 @@ The ARM LFS went through a change between 2017 and 2018 in its questionnaire str
 
 This change leads to an apparent decrease in non-paid employees.
 
-![empstat decrease](utilities/empstat.png)
+![empstat](utilities/empstat.png)
 
 ### Coding of industry and occupation codes
 
@@ -86,7 +85,9 @@ Different from previous years, the last two years, 2021 and 2022 do not have the
 
 In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks. Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represnt the actual age of a given observation. Yet instead, it indicates the age group a given observation belongs to. 
 
-### Educational categories
-
-
 ### Employment rate comparison
+
+As part of our harmonization quality checks, we conducted a cross examination of employment rate with official annual reports. The figure below shows the comparison which indicates that our `lstatus` was correctly harmonized and the results align nicely with official results. 
+
+![employment_rate](utilities/employment_comparison.png)
+
